2008-04-19  Justus Piater  <Justus-bulk@Piater.name>

	* nnir.el (nnir-add-result): New helper macro.
	(nnir-compose-result): Use it.  Fix inexistent file check for maildir.

2008-04-15  Christoph Conrad <christoph.conrad@gmx.de>

	* nnir.el (nnir-run-swish++): Fix inexistent file check for nnml.

2008-04-15  Reiner Steib  <Reiner.Steib@gmx.de>

	* nnir.el (nnir-run-swish++): Fix typo in doc string.  Move comment on
	nnml-use-compressed-files to more suitable place.

2008-04-13  Daniel Pittman  <daniel@rimspace.net>

	* nnir.el (nnir-run-imap): Add doc string.  Use `nnir-imap-make-query'.
	(nnir-imap-make-query, nnir-imap-query-to-imap)
	(nnir-imap-expr-to-imap, nnir-imap-parse-query, nnir-imap-next-expr)
	(nnir-imap-peek-symbol, nnir-imap-next-symbol)
	(nnir-imap-delimited-string, nnir-imap-end-of-input): New functions.
	Implement a query language for IMAP search, parse that and compose the
	back-end query from it.  This allows searches with AND, OR and fixed
	strings, not just a single substring.

2008-04-13  Reiner Steib  <Reiner.Steib@gmx.de>

	* nnir.el: Add assignment status.
	(nnir-group-mode-hook): Remove XEmacs 19 compatibility code.

2008-04-13  Justus Piater  <Justus-bulk@Piater.name>

	* nnir.el (nnir-run-swish++): Suppress non-existing files.
	(nnir-group-server): For native groups, obtain the server name from
	gnus-select-method.
	(nnir-run-swish++, nnir-run-namazu): Support nnmaildir.
	(nnir-compose-result): New function unifying some code formerly
	duplicated between nnir-run-swish++ and nnir-run-namazu.

2008-02-06  Reiner Steib  <Reiner.Steib@gmx.de>

	* README: Clarify relevant Emacs versions for sendmail.el and
	smtpmail.el.  Add fill-column.  Refill paragraphs.  Typographic fixes.
	Add comment about gpg-ring.el and gpg.el.

2007-12-09  Reiner Steib  <Reiner.Steib@gmx.de>

	* README: Remove hashcash.el.

2007-12-09  Dan Nicolaescu  <dann@ics.uci.edu>

	* mail/sendmail.el (dired-view-file, dired-get-filename): Declare as
	functions.
